Fix notes sidebar overflow

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -149,6 +149,7 @@
 .notes-sidebar {
   width: 30%;
   background-color: lightgrey;
+  overflow: scroll;
 }
 
 .x-button {
